# Search-engine

./: .gitignore  CMakeLists.txt  README.md  answers.json  config.json  requests.json
include/: ConverterJSON.h  InvertedIndex.h  SearchEngine.h  customExceptions.h
resources/: text01.txt  text02.txt  text03.txt  text04.txt  text05.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  main.cpp
tests/: ConverterJSON_test.cpp  InvertedIndex_test.cpp  SearchEngine_test.cpp
